# NexGen-Engine

./: .auditignore  .gitignore  ARCHITECTURE.md  CONDUIT_README.md  Cargo.toml  README.md  alignment_check.txt  build.ps1  build_all.ps1  build_error.txt  check_errors.txt  check_output.txt  check_requirements.ps1  clean_all.ps1  create_shortcuts.ps1  deploy-nexus.ps1  deploy.ps1  detect_source.txt  detect_source_2.txt  dev_shell.ps1  discovery_kept.txt  enable_webview_debugging.ps1  final_err.txt  final_error.txt  installer_setup.iss  kill_processes.ps1  launch_suite.ps1  leak_check.txt  leaking_paths.txt  nexus_dom.html  nexus_dom_final.html  nexus_dom_final_utf8.html  nexus_dom_utf8.html  output.txt  readable_logs.txt  restore.ps1  run_tests.ps1  setup.ps1  setup_log.txt  start-hub.ps1  (+9 more)
Documentation/: PROGEN_INTEGRATION_PROPOSAL.md.archived  package-lock.json  package.json  policy.rs
NexGen-Engine/: types.ts
NexGen-Hub/: .env  App.tsx  README.md  compile_errors.txt  compile_errors_11.txt  compile_errors_12.txt  compile_errors_2.txt  compile_errors_3.txt  compile_errors_4.txt  compile_errors_5.txt  compile_errors_6.txt  compile_errors_7.txt  compile_errors_8.txt  compile_errors_9.txt  index.css  package-lock.json  synapseConstants.tsx  types.ts
hub/: App.tsx  README.md  constants.ts  index.css  index.html  metadata.json  nexscript_bible.md  package-lock.json  package.json  tailwind.config.js
nexscript/: Cargo.toml  output.rs
nexscript-vscode/: package.json  (+1 more)
nexscript/examples/: player.nx
nexscript/src/: ast_builder.rs  grammar.pest  lib.rs  type_checker.rs
(+66 files in other folders)
